# ord-people-fs

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: deploy.yml  main.yml
backend/: .gitignore  gunicorn.conf.py  pyproject.toml
backend/.github/workflows/: main.yaml
backend/migrations/versions/: a1f2c3d4e5b6_expand_description_and_about.py  be657372c2b1_initial_schema.py
backend/src/ord_people/: dependencies.py  exception_handlers.py  lifespan.py
backend/src/ord_people/api/: __init__.py  auth.py  comments.py
backend/src/ord_people/config/: auth.py  log.py  settings.py
backend/src/ord_people/config/constatns/: bio.py  media.py  post.py  rate.py
backend/src/ord_people/db/: session.py  uow.py
backend/src/ord_people/infra/: logging.py  rate_limit.py
backend/src/ord_people/infra/auth/: session_repository.py
backend/src/ord_people/infra/cache/: redis.py
backend/src/ord_people/infra/media/: image_processor.py
backend/src/ord_people/infra/storage/: s3.py
backend/src/ord_people/models/: __init__.py  base.py  bio.py
backend/src/ord_people/repos/: user.py
backend/src/ord_people/schemas/: bio.py  comment.py  post.py  reaction.py  user.py
backend/src/ord_people/services/: auth.py  comment.py  post.py  reaction.py  user.py
backend/src/ord_people/utils/: fields.py
backend/tests/: conftest.py
backend/tests/api/: test_authorization_matrix.py  test_posts.py  test_tags.py  test_users.py  test_validation_matrix.py
backend/tests/factories/: _base.py  post.py  tag.py
backend/tests/helpers/: auth_fixtures.py  media.py
backend/tests/unit/: test_db_session.py  test_exception_handlers.py
backend/tests/unit/infra/: test_image_processor.py  test_password_hasher.py  test_session_repository.py  test_session_signer.py
backend/tests/unit/repos/: test_comment_repo.py  test_post_repo.py  test_tag_repo.py
backend/tests/unit/schemas/: test_validators.py
backend/tests/unit/services/: test_auth_service.py  test_reaction_service.py  test_user_service.py
docs/superpowers/plans/: 2026-05-31-monorepo-restructure.md
frontend/: .dockerignore  Dockerfile  tsconfig.app.json  vite.config.ts
frontend/.github/workflows/: deploy.yml
frontend/src/: index.css
frontend/src/api/: client.ts  types.ts
frontend/src/api/queries/: auth.ts  comments.ts
frontend/src/components/: Avatar.tsx  DefaultCover.tsx  Filters.tsx  ImagePreview.tsx  PostCard.tsx  RequireAuth.tsx  ScrollTopButton.tsx  UserFeed.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/: ConfirmDialog.tsx  ErrorAlert.tsx  IconButton.tsx  Spinner.tsx
frontend/src/hooks/: useIntersection.ts
frontend/src/lib/: constants.ts
frontend/src/pages/: About.tsx  Login.tsx  PostDetail.tsx  PostEditor.tsx  ProfileEditor.tsx  Register.tsx
gateway/: .dockerignore  Dockerfile  docker-entrypoint.sh  nginx.dev.conf.template  nginx.prod.conf.template
ord-people/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-entrypoint.sh
ord-people-frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  openapi.json  package-lock.json  package.json
ord-people-frontend/src/: App.tsx  main.tsx  vite-env.d.ts
ord-people-frontend/src/api/: schema.ts
ord-people-frontend/src/api/queries/: posts.ts  tags.ts  users.ts
ord-people-frontend/src/components/: CommentList.tsx  PostFeed.tsx  ReactionBar.tsx  UserCard.tsx
ord-people-frontend/src/components/layout/: Layout.tsx
ord-people-frontend/src/lib/: format.ts
ord-people-frontend/src/pages/: Home.tsx  NotFound.tsx  PostEditor.tsx  UserProfile.tsx  Users.tsx
ord-people/migrations/: env.py
ord-people/nginx/: nginx.dev.conf  nginx.prod.conf
ord-people/src/ord_people/: app_factory.py  exceptions.py  main.py  middleware.py
ord-people/src/ord_people/api/: posts.py  reactions.py  tags.py  users.py
ord-people/src/ord_people/config/: admin.py  app.py  (+6 more)
ord-people/tests/: conftest.py
ord-people/tests/api/: test_auth.py  test_comments.py  test_posts.py  test_rate_limit.py  test_reactions.py
ord-people/tests/factories/: __init__.py  bio.py  comment.py  reaction.py  user.py
ord-people/tests/helpers/: fakes.py  media.py  payloads.py
(+39 files in other folders)
